@@ -47,10 +47,7 @@ import com.pi4j.runtime.Runtime;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.Collections;
-import java.util.Map;
+import java.util.*;
 import java.util.concurrent.ConcurrentHashMap;
 
 /**
@@ -148,8 +145,9 @@ public class DefaultRuntimeProviders implements RuntimeProviders {
     public <T extends Provider> Map<String, T> all(Class<T> providerClass) {
 
         if(!providerClass.isInterface()){
-            logger.warn("Provider type [" + providerClass.getName() + "] requested; this is not an 'Interface'" +
-                    " and make not return a valid provider or may not be able to cast to the concrete class.");
+            logger.warn("Provider type [{}] requested; this is not an 'Interface' and make not return a valid " +
+                        "provider or may not be able to cast to the concrete class.",
+                providerClass.getName());
         }
 
         // create a map <io-id, io-instance> of providers that extend of the given io class
@@ -228,7 +226,7 @@ public class DefaultRuntimeProviders implements RuntimeProviders {
     }
 
     private <T extends Provider> Providers add(T ... provider) throws ProviderInitializeException, ProviderAlreadyExistsException {
-        return add(Arrays.asList(provider));
+        return add(List.of(provider));
     }
 
     private <T extends Provider> Providers add(Collection<T> provider) throws ProviderAlreadyExistsException, ProviderInitializeException {
@@ -290,7 +288,7 @@ public class DefaultRuntimeProviders implements RuntimeProviders {
         try {
             logger.trace("calling 'shutdown()' provider [id={}; name={}; class={}]",
                     provider.id(), provider.name(), provider.getClass().getName());
-            provider.shutdown(runtime.context());
+            provider.shutdownInternal(runtime.context());
         } catch (ShutdownException e) {
             logger.error("unable to 'shutdown()' provider: [id={}; name={}]; {}",
                     provider.id(), provider.name(), e.getMessage());
