@@ -30,8 +30,8 @@ import com.pi4j.platform.Platform;
 import com.pi4j.platform.PlatformBase;
 import com.pi4j.provider.Provider;
 
-import java.util.Arrays;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Set;
 
 /**
@@ -110,7 +110,7 @@ public class TestPlatform extends PlatformBase<TestPlatform> implements Platform
      */
     public void setProviders(String ... providerId){
         this.supportedProviderIds.clear();
-        this.supportedProviderIds.addAll(Arrays.asList(providerId));
+        this.supportedProviderIds.addAll(List.of(providerId));
     }
 
     /**
